--- a/VS2010/TGAEngine.vcxproj
+++ b/VS2010/TGAEngine.vcxproj
@@ -77,6 +77,7 @@
     <PostBuildEvent>
       <Command>copy /y $(OutDir)TGAEngine.lib $(OutDir)..\..\Animation-Calibrator\lib\TGAEngine
 robocopy /s "$(OutDir)obj" "$(OutDir)..\..\Animation-Calibrator\lib\TGAEngine\obj"
+robocopy "$(OutDir)..\include"  "$(OutDir)..\..\Animation-Calibrator\include\TGAEngine"
 exit 0</Command>
       <Message>Copying Library to Animation-Calibrator</Message>
     </PostBuildEvent>
